--- a/conf/.env
+++ b/conf/.env
@@ -1,5 +1,5 @@
 # MySQL database connection details
-host=127.0.0.1
+host=localhost
 user=root
-password=studentattendance
-database=student_attendance
+password=Killisme202004
+database=attendance
